# ray-tracer

./: Angel.h  CMakeLists.txt  InitShader.cpp  README.txt  defs.h  fshader.glsl  primitive.cpp  primitive.h  ray_trace.cpp  tracer.cpp  tracer.h  vshader.glsl
